; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/unisys/visornic/extr_visornic_main.c_visornic_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/unisys/visornic/extr_visornic_main.c_visornic_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"visornic\00", align 1
@visornic_debugfs_dir = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"info\00", align 1
@debugfs_info_fops = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [12 x i8] c"enable_ints\00", align 1
@debugfs_enable_ints_fops = common dso_local global i32 0, align 4
@visornic_driver = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @visornic_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @visornic_init() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @debugfs_create_dir(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32* null)
  store i32 %2, i32* @visornic_debugfs_dir, align 4
  %3 = load i32, i32* @visornic_debugfs_dir, align 4
  %4 = call i32 @debugfs_create_file(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 256, i32 %3, i32* null, i32* @debugfs_info_fops)
  %5 = load i32, i32* @visornic_debugfs_dir, align 4
  %6 = call i32 @debugfs_create_file(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i32 128, i32 %5, i32* null, i32* @debugfs_enable_ints_fops)
  %7 = call i32 @visorbus_register_visor_driver(i32* @visornic_driver)
  store i32 %7, i32* %1, align 4
  %8 = load i32, i32* %1, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %0
  %11 = load i32, i32* @visornic_debugfs_dir, align 4
  %12 = call i32 @debugfs_remove_recursive(i32 %11)
  br label %13

13:                                               ; preds = %10, %0
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @debugfs_create_dir(i8*, i32*) #1

declare dso_local i32 @debugfs_create_file(i8*, i32, i32, i32*, i32*) #1

declare dso_local i32 @visorbus_register_visor_driver(i32*) #1

declare dso_local i32 @debugfs_remove_recursive(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
